--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5234,7 +5234,7 @@ ul.nav_menu_1 {
 
 .add-details, .removed-details{
    overflow-y: auto;
-   height: 100px;
+   max-height: 100px;
 }
 
 #student_data_set_div{
